--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,11 +27,9 @@ dist.jar=${dist.dir}/MINIPROYECTO1_FADA.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.postgresql-9.0-801.jdbc3.jar=lib/postgresql-9.0-801.jdbc3.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.postgresql-9.0-801.jdbc3.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
