--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -81,4 +81,5 @@ run.test.classpath=\
     ${build.test.classes.dir}
 source.encoding=UTF-8
 src.dir=src
+src.src-james.dir=src-james
 test.src.dir=test
